Implemented datetime fieldtype

--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,8 @@
 		{ text: "First Name", value: "FirstName", type: "string" },
 		{ text: "Last Name", value: "LastName", type: "string" }, 
 		{ text: "Age", value: "Age", type: "int" },
-		{ text: "Is Activated", value: "IsActivated", type: "bool" }]
+		{ text: "Is Activated", value: "IsActivated", type: "bool" },
+		{ text: "Date of Birth", value: "DateOfBirth", type: "datetime" }]
 	}).Model;
 
 	</script>
