--- a/test/index.html
+++ b/test/index.html
@@ -12,13 +12,21 @@
 	<script type="text/javascript" src="../src/jquery.odatafilterui.js"></script>
 	<script type="text/javascript">
 
-	window.Model = $("#filter").oDataFilterUI({ Fields: [ 
-		{ text: "First Name", value: "FirstName", type: "string" },
-		{ text: "Last Name", value: "LastName", type: "string" }, 
-		{ text: "Age", value: "Age", type: "int" },
-		{ text: "Is Activated", value: "IsActivated", type: "bool" },
-		{ text: "Date of Birth", value: "DateOfBirth", type: "datetime" },
-		{ text: "Tags", value: "Tags", type: "array[string]" }]
+	window.Model = $("#filter").oDataFilterUI({ 
+		Fields: [ 
+			{ text: "First Name", value: "FirstName", type: "string" },
+			{ text: "Last Name", value: "LastName", type: "string" }, 
+			{ text: "Age", value: "Age", type: "int" },
+			{ text: "Is Activated", value: "IsActivated", type: "bool" },
+			{ text: "Date of Birth", value: "DateOfBirth", type: "datetime" },
+			{ text: "Tags", value: "Tags", type: "array[tag]" }
+		],
+		CustomTypes : [
+			{ 
+				name: "tag", 
+				fields: [{ text: "Tag", value: "Value", type: "string" }]
+			}
+		]
 	}).Model;
 
 	</script>
