--- a/test/index.html
+++ b/test/index.html
@@ -17,8 +17,11 @@
 			{ text: "First Name", value: "FirstName", type: "string" },
 			{ text: "Last Name", value: "LastName", type: "string" }, 
 			{ text: "Age", value: "Age", type: "int" },
+			{ text: "MetaScore", value: "MetaScore", type: "double" },
 			{ text: "Is Activated", value: "IsActivated", type: "bool" },
 			{ text: "Date of Birth", value: "DateOfBirth", type: "datetime" },
+			{ text: "User Scores", value: "UserScores", type: "array[double]" },
+			{ text: "String Tags", value: "StringTags", type: "array[string]" },
 			{ text: "Tags", value: "Tags", type: "array[tag]" }
 		],
 		CustomTypes : [
